tr1200_ws/log/build_2025-04-08_13-43-14/tr1200_WASD/stderr.log
  File "/home/ncpa/tr1200_ws/install/tr1200_WASD/lib/python3.10/site-packages/tr1200_WASD/teleop_node.py", line 1
    mport rclpy
          ^^^^^
SyntaxError: invalid syntax

